--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,18 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:text="@string/movies_error"/>
 
+    <TextView
+            android:visibility="gone"
+            android:gravity="center_horizontal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvNoDataFound"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="@string/movies_error"/>
+
     <ProgressBar
             android:visibility="gone"
             android:id="@+id/viewLoading"
